NIST_NVD_SECURITY_CHECK for X3D players